# selective

./: .gitignore  .travis.yml  CHANGES.md  LICENSE  README.md  hie.yaml  selective.cabal  stack.yaml
.github/workflows/: ci.yml
examples/: Build.hs  Parser.hs  Processor.hs  Query.hs  Teletype.hs  Validation.hs
examples/Teletype/: Rigid.hs
paper/: .gitignore  1-intro.tex  2-selective.tex  3-static.tex  4-haxl.tex  5-free.tex  6-alternatives.tex  7-related.tex  8-conclusions.tex  Makefile  acmart.cls  cover-letter.txt  irc-log-branchy.md  main.tex  refs.bib  response.md  todo.md
paper/artefact/: Dockerfile  README-ACMDL.md  README.md
src/Control/: Batch.hs  Match.hs  Selective.hs  United.hs
src/Control/Match/: Arrow.hs  Profunctor.hs
src/Control/Selective/: Example.hs  Free.hs  Match.hs  Multi.hs  Parser.hs  Sketch.hs
src/Control/Selective/Example/: ISA.hs  Teletype.hs
src/Control/Selective/Example/ISA/: Instruction.hs  Programs.hs  Simulate.hs  Types.hs
src/Control/Selective/Free/: Generalised.hs  Rigid.hs
src/Control/Selective/Free/Examples/: ISA.hs  PingPong.hs  Teletype.hs
src/Control/Selective/Free/Examples/ISA/: Instruction.hs  Programs.hs  Simulate.hs  Types.hs
src/Control/Selective/Free/Rigid/: Generalised.hs
src/Control/Selective/Rigid/: Free.hs  Freer.hs
src/Control/Selective/Trans/: Except.hs  Maybe.hs  Validation.hs
test/: ArrowLaws.hs  FasterFree.hs  FasterFreerRigid.hs  FreeRigid2.hs  FreeRigid3.hs  FreerRigid.hs  Laws.hs  Main.hs  Sketch.hs  Test.hs
