name:          selective
version:       0.1.0
synopsis:      Selective applicative functors
license:       MIT
license-file:  LICENSE
author:        Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
maintainer:    Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
copyright:     Andrey Mokhov, 2018-2019
homepage:      https://github.com/snowleopard/selective
category:      Control
build-type:    Simple
cabal-version: 1.18
stability:     experimental
description:   Selective applicative functors: declare your effects statically,
               select which to execute dynamically.
               .
               This is a library for /selective applicative functors/, or just
               /selective functors/ for short, an abstraction between
               applicative functors and monads, introduced in
               <https://www.staff.ncl.ac.uk/andrey.mokhov/selective-functors.pdf this paper>.

extra-doc-files:
    README.md

source-repository head
    type:     git
    location: https://github.com/snowleopard/selective.git

library
    hs-source-dirs:     src
    exposed-modules:    Control.Selective,
                        Control.Selective.Free.Rigid
    build-depends:      base         >= 4.7     && < 5,
                        containers   >= 0.5.7.1 && < 7,
                        mtl          >= 2.2.1   && < 2.3,
                        transformers >= 0.5.2.0 && < 0.6
    default-language:   Haskell2010
    GHC-options:        -Wall
                        -fno-warn-name-shadowing
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints

test-suite test
    hs-source-dirs:     test, examples
    other-modules:      ArrowLaws,
                        Build,
                        Laws,
                        Parser,
                        Processor,
                        Sketch,
                        Teletype,
                        Validation
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    build-depends:      base                   >= 4.7     && < 5,
                        checkers,
                        containers             >= 0.5.7.1 && < 7,
                        mtl                    >= 2.2.1   && < 2.3,
                        QuickCheck             >= 2.9     && < 2.13,
                        selective,
                        tasty                  >= 1.2,
                        tasty-expected-failure >= 0.11.1.1,
                        tasty-quickcheck       >= 0.10
    default-language:   Haskell2010
    GHC-options:        -Wall
                        -fno-warn-name-shadowing
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints
                        -fno-warn-orphans
                        -fno-warn-missing-signatures
