name:          selective
version:       0.3
synopsis:      Selective applicative functors
license:       MIT
license-file:  LICENSE
author:        Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
maintainer:    Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
copyright:     Andrey Mokhov, 2018-2019
homepage:      https://github.com/snowleopard/selective
category:      Control
build-type:    Simple
cabal-version: 1.18
tested-with:   GHC == 8.0.2,
               GHC == 8.2.2,
               GHC == 8.4.3,
               GHC == 8.6.5,
               GHC == 8.8.1
stability:     experimental
description:   Selective applicative functors: declare your effects statically,
               select which to execute dynamically.
               .
               This is a library for /selective applicative functors/, or just
               /selective functors/ for short, an abstraction between
               applicative functors and monads, introduced in
               <https://www.staff.ncl.ac.uk/andrey.mokhov/selective-functors.pdf this paper>.

extra-doc-files:
    CHANGES.md
    README.md

source-repository head
    type:     git
    location: https://github.com/snowleopard/selective.git

library
    hs-source-dirs:     src
    exposed-modules:    Control.Selective,
                        Control.Selective.Free,
                        Control.Selective.Rigid.Free,
                        Control.Selective.Rigid.Freer
    build-depends:      base         >= 4.7     && < 5,
                        containers   >= 0.5.5.1 && < 0.7,
                        transformers >= 0.4.2.0 && < 0.6
    default-language:   Haskell2010
    other-extensions:   DeriveFunctor,
                        FlexibleInstances,
                        GADTs,
                        GeneralizedNewtypeDeriving,
                        RankNTypes,
                        StandaloneDeriving,
                        TupleSections,
                        TypeApplications
    GHC-options:        -Wall
                        -fno-warn-name-shadowing
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints

test-suite test
    hs-source-dirs:     test, examples
    other-modules:      Build,
                        Laws,
                        Parser,
                        Processor,
                        Query,
                        Sketch,
                        Teletype,
                        Teletype.Rigid,
                        Validation
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    build-depends:      base                   >= 4.7     && < 5,
                        containers             >= 0.5.5.1 && < 0.7,
                        mtl                    >= 2.2.1   && < 2.3,
                        QuickCheck             >= 2.8     && < 2.14,
                        selective,
                        tasty                  >= 0.11,
                        tasty-expected-failure >= 0.11,
                        tasty-quickcheck       >= 0.8.4,
                        transformers           >= 0.4.2.0 && < 0.6
    default-language:   Haskell2010
    GHC-options:        -Wall
                        -fno-warn-name-shadowing
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints
